# TRS-80

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  build.sh
config/: config.toml
src/: cassette.rs  config.rs  console.rs  disk.rs  display.rs  hexconversion.rs  keyboard.rs  keyboard_device.rs  machine.rs  main.rs  monitor.rs
tape/: filename.txt
