[package]
name = "trust-80"
version = "0.4.0"
edition = "2021"
authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
description = "TRS-80 Emulator"
keywords = ["emulation", "emulator", "TRS-80", "Z80"]
categories = ["emulators"]
license = "MIT"
repository = "https://github.com/nicolasbauw/TRS-80"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zilog_z80 = "0.9.0"
toml = "0.5.9"
serde = "1.0.145"
serde_derive = "1.0.145"

[dependencies.sdl2]
version = "0.35.2"
features = ["ttf"]