[package]
name = "trust-80"
version = "0.6.0"
edition = "2021"
authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
description = "TRS-80 Emulator"
keywords = ["emulation", "emulator", "TRS-80", "Z80"]
categories = ["emulators"]
license = "MIT"
repository = "https://github.com/nicolasbauw/TRS-80"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zilog_z80 = "0.10.0"
toml = "0.5.9"
serde = "1.0.145"
serde_derive = "1.0.145"

[dependencies.sdl2]
version = "0.35.2"
features = ["ttf"]

[package.metadata.bundle]
name = "TRuSt-80"
identifier = "com.doe.exampleapplication"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "0.6.0"
resources = ["config", "assets", "tape", "bin", "images/**/*.png"]
copyright = "Copyright (c) Nicolas BAUW 2022. All rights reserved."
category = "Utility"
short_description = "TRS-80 (Model 1) emulator."
